<resources>
    <string name="app_name">ChatProject</string>
    <string name="username">Username</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">register</string>
    <string name="login">Login</string>
    <string name="chat_app">Chat App</string>
    <string name="click_her_to_register">Click her to register</string>
    <string name="logout">Logout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main_basic">MainBasicActivity</string>
    <string name="title_activity_main_tabbed">MainTabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="type_a_message">Type a message...</string>
    <string name="hello">hello</string>
    <string name="profile">Profile</string>
    <string name="search">Search...</string>
    <string name="seen">seen</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="your_email">Your Email</string>
    <string name="reset">Reset</string>
    <string name="by_clicking_reset_you_will_receive_an_email_to_reset_your_password">By clicking RESET, you will receive an email to reset your password</string>
</resources>
